--- a/Descubrimientos.html
+++ b/Descubrimientos.html
@@ -59,7 +59,7 @@ style="color: white;">epimg.net.pdf (4 jul 2012)</a></li></ul>
 
 <h2>Pagina oficial del CERN</h2><ul><li><a href="https://www.home.cern/" style="color: white;">CERN</a></li></ul><br>
 
-<button onclick="location.href='Biografia.html'" 
+<button onclick="location.href='index.html'" 
 style="color: #B2720C; background-color: #202124; border: none; padding: 8px 16px; cursor: pointer; margin-bottom: 0;">
 Volver a la Biografía</button><br><br><br></div><hr size="4" color="white" style="margin-top: 0; margin-bottom: 0;">
 
