--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <head><title>Biografia Peter Higgs</title>
 
 <style>
+#marquee{
+animation: marquee 8s linear infinite;
+white-space: nowrap; }
+@keyframes marquee{
+0% { transform: translateX(0%); }
+50% { transform: translateX(20%); } }
 header{
 flex: 0 0 auto; }
 footer{
@@ -23,8 +29,19 @@ cursor: pointer; }
 <font color="white" face="Linux Libertine, Georgia, Times, serif" style="text-shadow: black -0.2em 0.2em 0.2em;">
 
 <div class="header"><div style="display: inline-block; width: 450;">
-<img src="logo.png" width="80" height="80" align="left" hspace="20" vspace="10">
-<h1 align="left">Biografias JM</h1></div>
+<img id="imagen" src="logo.png" width="80" height="80" align="left" hspace="20" vspace="10" 
+onmouseover="cambiarImagen()" onmouseout="restaurarImagen()">
+<h1 align="left" id="marquee">Biografias JM</h1></div>
+
+<script>
+function cambiarImagen(){
+var imagen=document.getElementById("imagen");
+imagen.src="logo2.png"; }
+function restaurarImagen(){
+var imagen=document.getElementById("imagen");
+imagen.src="logo.png"; }
+</script>
+
 <div class="options" style="display: inline-block;">
 <button onclick="location.href='Descubrimientos.html'">Descubrimientos de Higgs</button>&nbsp;&nbsp;&nbsp;&nbsp;
 <button onclick="location.href='Formulario.html'">Comentarios</button>&nbsp;&nbsp;&nbsp;&nbsp;
@@ -68,13 +85,26 @@ Fue en Edimburgo cuando se interesó por la masa, desarrollando la idea de que l
 </ul></td>
 
 <td style="background-color: #202124;"><b>José Mario</b>
-<td style="background-color: #202124;"><a href="https://twitter.com/"><img src="tw.png" width="50" height="50"></a></td>
-<td style="background-color: #202124;"><a href="https://www.facebook.com/"><img src="fc.png" width="50" height="50"></a></td>
-<td style="background-color: #202124;"><a href="https://www.instagram.com/"><img src="ig.png" width="50" height="50"></a></td>
+<td style="background-color: #202124;"><a href="https://twitter.com/">
+<img src="tw.png" width="50" height="50" style="border: solid;border-color: black; border-width: 1px;"></a></td>
+<td style="background-color: #202124;"><a href="https://www.facebook.com/">
+<img src="fc.png" width="50" height="50" style="border: solid;border-color: black; border-width: 1px;"></a></td>
+<td style="background-color: #202124;"><a href="https://www.instagram.com/">
+<img src="ig.png" width="50" height="50" style="border: solid;border-color: black; border-width: 1px;"></a></td>
 </td>
 
-<td style="background-color: #202124;"><h4 align="center" style="color: white"><br>
+<td style="background-color: #202124;"><h4 id="tex" align="center" style="color: white"><br>
 © 2023 José Mario Peña Ledesma - Todos los derechos reservados</h4></td></tr></table></div>
+
+<script>
+var tex=document.getElementById("tex");
+tex.addEventListener("mouseover", function(){
+tex.style.cursor="crosshair";
+tex.style.color="#B2720C"; });
+tex.addEventListener("mouseout", function(){
+tex.style.cursor="default";
+tex.style.color="white"; });
+</script>
 
 </body>
 </html>
