--- a/Formulario.html
+++ b/Formulario.html
@@ -2,6 +2,12 @@
 <head><title>Comentarios</title>
 
 <style>
+#marquee{
+animation: marquee 8s linear infinite;
+white-space: nowrap; }
+@keyframes marquee{
+0% { transform: translateX(0%); }
+50% { transform: translateX(20%); } }
 header{
 flex: 0 0 auto; }
 footer{
@@ -23,15 +29,17 @@ cursor: pointer; }
 <font color="white" face="Linux Libertine, Georgia, Times, serif" style="text-shadow: black -0.2em 0.2em 0.2em;">
 
 <div class="header"><div style="display: inline-block; width: 450;">
-<img src="logo.png" width="80" height="80" align="left" hspace="20" vspace="10">
-<h1 align="left">Biografias JM</h1></div>
+<img id="imagen" src="logo.png" width="80" height="80" align="left" hspace="20" vspace="10" 
+onmouseover="cambiarImagen()" onmouseout="restaurarImagen()">
+<h1 align="left" id="marquee">Biografias JM</h1></div>
+
 <div class="options" style="display: inline-block;">
 <button onclick="location.href='index.html'">Biografia Peter Higgs</button>&nbsp;&nbsp;&nbsp;&nbsp;
 <button onclick="location.href='Descubrimientos.html'">Descubrimientos de Higgs</button>&nbsp;&nbsp;&nbsp;&nbsp;
 <button onclick="location.href='Imagenes.html'">Más de Peter Higgs</button>&nbsp;&nbsp;&nbsp;&nbsp;
 </div><hr size="4" color="white" style="margin-bottom: 0;"></div>
 
-<div style="background-image: url('fondo2.jpg'); background-repeat: no-repeat; background-size: cover;">
+<div style="background-image: url('fondo2.jpg'); background-repeat: no-repeat; background-size: cover; margin-bottom: 10;">
 <h2 style="margin-top: 0;"><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- - - - Formulario de opinión - - - -</h2><br>
 
 <form method="post">
@@ -46,10 +54,29 @@ Del 1 al 10, que puntuación le da a la página?&nbsp;&nbsp;&nbsp;&nbsp;<select 
 <option value="cin">5</option><option value="sei">6</option><option value="sie">7</option><option value="och">8</option>
 <option value="nue">9</option><option value="die">10</option></select><br><br>
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="submit" value="Enviar" 
-style="color: white; background-color: #202124; border: none; padding: 8px 16px; cursor: pointer;">&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button onclick="confirma()" 
+style="color: white; background-color: #202124; border: none; padding: 8px 16px; cursor: pointer;">Enviar</button>&nbsp;&nbsp;&nbsp;&nbsp;
 <input type="reset" value="Borrar" style="color: white; background-color: #202124; border: none; padding: 8px 16px; cursor: pointer;">
 <br><br></form><hr size="4" color="white" style="margin-bottom: 0;"></div></font>
+
+<script>
+function cambiarImagen(){
+var imagen=document.getElementById("imagen");
+imagen.src="logo2.png"; }
+function restaurarImagen(){
+var imagen=document.getElementById("imagen");
+imagen.src="logo.png"; }
+function confirma(){
+if(typeof(Storage)!=="undefined"){
+var contador=localStorage.getItem("contadorVisitas");
+if(!contador){
+contador=1; } else{
+contador++; }
+localStorage.setItem("contadorVisitas", contador);
+var pregunta=confirm("¡Gracias por darnos tu opinion! Usted es el usuario numero: "+contador);
+if(pregunta){
+window.location="index.html"; } } }
+</script>
 
 <div class="footer"><table align="center" cellspacing="10" style="color: #B2720C; background-color: #2E3032; text-shadow: none;">
 <tr><td style="background-color: #202124;"><b>Puedes contactame por:</b><ul>
@@ -57,13 +84,26 @@ style="color: white; background-color: #202124; border: none; padding: 8px 16px;
 <li><font color="white">Telefono: <b>446 150 6955</b></font></li></ul></td>
 
 <td style="background-color: #202124;"><b>José Mario</b>
-<td style="background-color: #202124;"><a href="https://twitter.com/"><img src="tw.png" width="50" height="50"></a></td>
-<td style="background-color: #202124;"><a href="https://www.facebook.com/"><img src="fc.png" width="50" height="50"></a></td>
-<td style="background-color: #202124;"><a href="https://www.instagram.com/"><img src="ig.png" width="50" height="50"></a></td>
+<td style="background-color: #202124;"><a href="https://twitter.com/">
+<img src="tw.png" width="50" height="50" style="border: solid;border-color: black; border-width: 1px;"></a></td>
+<td style="background-color: #202124;"><a href="https://www.facebook.com/">
+<img src="fc.png" width="50" height="50" style="border: solid;border-color: black; border-width: 1px;"></a></td>
+<td style="background-color: #202124;"><a href="https://www.instagram.com/">
+<img src="ig.png" width="50" height="50" style="border: solid;border-color: black; border-width: 1px;"></a></td>
 </td>
 
-<td style="background-color: #202124;"><h4 align="center" style="color: white"><br>
+<td style="background-color: #202124;"><h4 id="tex" align="center" style="color: white"><br>
 © 2023 José Mario Peña Ledesma - Todos los derechos reservados</h4></td></tr></table></div>
+
+<script>
+var tex=document.getElementById("tex");
+tex.addEventListener("mouseover", function(){
+tex.style.cursor="crosshair";
+tex.style.color="#B2720C"; });
+tex.addEventListener("mouseout", function(){
+tex.style.cursor="default";
+tex.style.color="white"; });
+</script>
 
 </body>
 </html>
